tests/sqlite/ui-common/top_sql_missing_param_value.stderr
error: sql_forge!: parameter :id has no mapping
 --> tests/sqlite/tmp-ui/top_sql_missing_param_value.rs:8:9
  |
8 |         "SELECT id, name FROM users WHERE id = :id",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
